Added Argument Connection to Method executeSQL() & Created New One That Allows to Call Without a Connection.